BuildHughes/translation-tool/inputs/source_meta/objects/Account_User__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.Partner_Type__c</field>
                <operation>equals</operation>
                <value>Hughes Sales Agent (HSA), Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Users</relationshipLabel>
        <relationshipName>Account_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Business__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This represents CSR User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Behavior__c</fullName>
        <description></description>
        <label>Credit Check Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                    <default>true</default>
                    <label>Mandatory</label>
                </value>
                <value>
                    <fullName>Always Skip</fullName>
                </value>
                <value>
                    <fullName>Choose to Skip</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Queue_1_Account_User</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Queue_1</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AU-{00000}</displayFormat>
        <label>Account User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Users</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>